trunk/Archive/fd521dbdf5/output
main.cpp:25:9: error: too few template arguments for class template 'A'
    n1::A<int> a;
        ^
main.cpp:6:16: note: template is declared here
        struct A;
               ^
1 error generated.
